# computarume_selecao

./: .gitignore  .~lock.output.csv#  README.md  extra.csv  pyproject.toml
computarume_selecao/: main.py
